[package]
name = "adze-playground"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
adze = { path = "../runtime" }
adze-ir = { path = "../ir" }
adze-glr-core = { path = "../glr-core" }
anyhow = "1.0"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }
colored = "3.0"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "adze-playground"
path = "src/bin/playground.rs"