[package]
name = "adze"
description = "A package for defining tree-sitter grammars alongside Rust logic"
readme = "../README.md"
repository = "https://github.com/EffortlessMetrics/adze"
version = "0.8.0-dev"
authors = ["Steven Zimmerman, CPA"]
edition = "2024"
license = "MIT"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[features]
default = ["pure-rust"]
pure-rust = ["adze-macro/pure-rust", "adze-runtime-governance-api/pure-rust"]
tree-sitter-c2rust = [
    "tree-sitter-runtime-c2rust",
    "adze-runtime-governance-api/tree-sitter-c2rust",
]
tree-sitter-standard = [
    "tree-sitter-runtime-standard",
    "adze-runtime-governance-api/tree-sitter-standard",
]
glr = ["pure-rust", "adze-runtime-governance-api/glr"]
glr_telemetry = []
wasm = ["wasm-bindgen", "pure-rust"]
simd = ["pure-rust"]
serialization = ["serde", "serde_json"] # Enable tree serialization
legacy-parsers = [] # Enable to access deprecated parser_v2 and parser_v3 modules
incremental_glr = [] # Enable GLR incremental parsing support
debug_glr = [] # Enable debug output for GLR parser
ts-compat = [] # Enable Tree-sitter compatibility API
debug_incremental = [] # Enable debug output for incremental parsing
experimental_examples = [] # Enable experimental examples that use internal APIs
json_example = [] # Enable JSON parser example (separate from other examples)
external_scanners = [] # Enable external scanner support (feature-gated)
query = [] # Enable query predicates support
runtime-e2e = [] # Opt-in integration tests that exercise end-to-end parsing paths
strict_docs = [] # Enable strict documentation requirements
strict_api = [] # Enable strict API surface checking
unstable-benches = [] # Enable benchmarks that depend on unstable APIs

[dependencies]
tree-sitter-runtime-c2rust = { package = "tree-sitter-c2rust", version = "0.25.2", optional = true }
tree-sitter-runtime-standard = { package = "tree-sitter", version = "0.25.8", optional = true }
adze-macro = { version = "0.8.0-dev", path = "../macro" }
adze-ir = { version = "0.8.0-dev", path = "../ir" }
adze-glr-core = { version = "0.8.0-dev", path = "../glr-core", features = ["serialization"] }
adze-tablegen = { version = "0.8.0-dev", path = "../tablegen" }
adze-concurrency-caps-core = { path = "../crates/concurrency-caps-core" }
adze-linecol-core = { path = "../crates/linecol-core" }
adze-runtime-governance-api = { path = "../crates/runtime-governance-api" }
adze-stack-pool-core = { path = "../crates/stack-pool-core" }
adze-ts-format-core = { path = "../crates/ts-format-core" }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.142", optional = true }
anyhow = "1.0.98"
indexmap = "2.10.0"
once_cell = "1.19"
thiserror = "2.0.12"
rayon = "1.10.0"
ahash = "0.8.12"
smallvec = "1.13"
log = "0.4.27"
wasm-bindgen = { version = "0.2.100", optional = true }

[dev-dependencies]
insta = "1.43.1"
tempfile = "3.20.0"
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
proptest = "1.4"
hex = "0.4"
glr-test-support = { path = "../glr-test-support" }
adze-example = { path = "../example", features = ["ts-compat"] }
adze-python-simple = { path = "../grammars/python-simple" }
adze-python = { path = "../grammars/python" }
serial_test = "3.0"
adze-concurrency-map-core = { path = "../crates/concurrency-map-core" }
adze-concurrency-parse-core = { path = "../crates/concurrency-parse-core" }
adze-concurrency-init-core = { path = "../crates/concurrency-init-core" }
adze-concurrency-init-rayon-core = { path = "../crates/concurrency-init-rayon-core" }
adze-concurrency-init-classifier-core = { path = "../crates/concurrency-init-classifier-core" }
adze-concurrency-env-core = { path = "../crates/concurrency-env-core" }
adze-concurrency-plan-core = { path = "../crates/concurrency-plan-core" }
adze-concurrency-normalize-core = { path = "../crates/concurrency-normalize-core" }
ts-bridge = { path = "../tools/ts-bridge", features = ["with-grammars"] }
tree-sitter-json = "0.24"

[[bench]]
name = "simple_bench"
harness = false

[[bench]]
name = "parser_benchmark"
harness = false
required-features = ["unstable-benches"]

[[bench]]
name = "glr_parser_bench"
harness = false

[[bench]]
name = "incremental_parsing"
harness = false
required-features = ["unstable-benches"]

[[bench]]
name = "incremental_benchmark"
harness = false
required-features = ["unstable-benches"]

[[bench]]
name = "incremental_simple"
harness = false
required-features = ["unstable-benches"]

[[bench]]
name = "parser_bench"
harness = false
required-features = ["unstable-benches"]

[[bench]]
name = "perf_benchmark"
harness = false
required-features = ["unstable-benches"]

[[example]]
name = "external_scanner_demo"
required-features = ["experimental_examples"]

[[example]]
name = "glr_incremental_demo"
required-features = ["experimental_examples", "incremental_glr"]

[[example]]
name = "glr_incremental_simple"
required-features = ["experimental_examples", "incremental_glr"]

[[example]]
name = "incremental_demo"
required-features = ["experimental_examples"]

[[example]]
name = "json_parser_example"
required-features = ["json_example"]

[[example]]
name = "predicate_demo"
required-features = ["experimental_examples"]

[[example]]
name = "pure_parser_demo"
required-features = ["experimental_examples", "pure-rust"]

[[example]]
name = "lang_probe"
required-features = ["experimental_examples"]

# [[example]]
# name = "validation_demo"
# required-features = ["experimental_examples"]
