[package]
name = "adze"
version = "0.8.0"
edition = "2024"
rust-version = "1.92"
autoexamples = false
authors = ["Steven Zimmerman, CPA"]
description = "Define tree-sitter grammars alongside Rust logic with AST-first parsing"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/effortlessmetrics/adze"
homepage = "https://github.com/effortlessmetrics/adze"
documentation = "https://docs.rs/adze"
readme = "README.md"
publish = ["crates-io"]
keywords = ["parsing", "codegen", "grammar", "tree-sitter", "glr"]
categories = ["development-tools", "parsing"]
include = ["Cargo.toml", "LICENSE*", "README*", "src/**", "build.rs", "benches/**"]

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["pure-rust"]
pure-rust = ["adze-macro/pure-rust", "adze-runtime-governance-api/pure-rust"]
tree-sitter-c2rust = ["tree-sitter-runtime-c2rust", "adze-runtime-governance-api/tree-sitter-c2rust"]
tree-sitter-standard = ["tree-sitter-runtime-standard", "adze-runtime-governance-api/tree-sitter-standard"]
wasm = ["wasm-bindgen", "pure-rust"]
simd = ["pure-rust"]
serialization = ["serde", "serde_json", "adze-glr-core/serialization"] # Enable tree serialization
legacy-parsers = [] # Enable to access deprecated parser_v2 and parser_v3 modules
incremental_glr = [] # Enable GLR incremental parsing support
debug_glr = [] # Enable debug output for GLR parser
ts-compat = [] # Enable Tree-sitter compatibility API
debug_incremental = [] # Enable debug output for incremental parsing
experimental_examples = [] # Enable experimental examples that use internal APIs
json_example = [] # Enable JSON parser example (separate from other examples)
external_scanners = [] # Enable external scanner support (feature-gated)
query = [] # Enable query predicates support
runtime-e2e = [] # Opt-in integration tests that exercise end-to-end parsing paths
strict_docs = [] # Enable strict documentation requirements
strict_api = [] # Enable strict API surface checking
unstable-benches = [] # Enable benchmarks that depend on unstable APIs
glr_telemetry = [] # Enable GLR telemetry
glr = ["adze-runtime-governance-api/glr"] # Enable GLR parser mode
with-grammars = ["ts_bridge", "tree_sitter_json"] # Enable tests that require ts-bridge and tree-sitter grammars

[dependencies]
tree-sitter-runtime-c2rust = { package = "tree-sitter-c2rust", version = "0.25.2", optional = true }
tree-sitter-runtime-standard = { package = "tree-sitter", version = "0.25.8", optional = true }
adze-macro = { version = "0.8.0", path = "../macro" }
adze-ir = { version = "0.8.0", path = "../ir" }
adze-glr-core = { version = "0.8.0", path = "../glr-core" }
adze-tablegen = { version = "0.8.0", path = "../tablegen" }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.142", optional = true }
anyhow = "1.0.98"
indexmap = "2.10.0"
once_cell = "1.19"
thiserror = "2.0.12"
rayon = "1.10.0"
ahash = { version = "0.8.12", default-features = false, features = ["std"] }
log = "0.4.27"
smallvec.workspace = true
wasm-bindgen = { version = "0.2.100", optional = true }
adze-concurrency-caps-core = { version = "0.1.0", path = "../crates/concurrency-caps-core" }
adze-linecol-core = { version = "0.1.0", path = "../crates/linecol-core" }
adze-ts-format-core = { version = "0.1.0", path = "../crates/ts-format-core" }
ts_bridge = { package = "ts-bridge", version = "0.1.0", path = "../tools/ts-bridge", optional = true, default-features = false }
tree_sitter_json = { package = "tree-sitter-json", version = "0.24", optional = true }
adze-runtime-governance-api = { version = "0.1.0", path = "../crates/runtime-governance-api" }
adze-stack-pool-core = { version = "0.1.0", path = "../crates/stack-pool-core" }

[dev-dependencies]
insta = "1.43.1"
tempfile = "3.20.0"
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
proptest = "1.4"
hex = "0.4"
glr-test-support = { version = "0.1.0", path = "../glr-test-support" }
adze-concurrency-init-rayon-core = { version = "0.1.0", path = "../crates/concurrency-init-rayon-core" }
adze-concurrency-init-classifier-core = { version = "0.1.0", path = "../crates/concurrency-init-classifier-core" }
adze-concurrency-init-core = { version = "0.1.0", path = "../crates/concurrency-init-core" }
adze-concurrency-env-core = { version = "0.1.0", path = "../crates/concurrency-env-core" }
adze-concurrency-map-core = { version = "0.1.0", path = "../crates/concurrency-map-core" }
adze-concurrency-normalize-core = { version = "0.1.0", path = "../crates/concurrency-normalize-core" }
adze-concurrency-parse-core = { version = "0.1.0", path = "../crates/concurrency-parse-core" }
adze-concurrency-plan-core = { version = "0.1.0", path = "../crates/concurrency-plan-core" }

[[bench]]
name = "simple_bench"
harness = false

[[bench]]
name = "parser_benchmark"
harness = false
required-features = ["unstable-benches"]

[[bench]]
name = "glr_parser_bench"
harness = false

[[bench]]
name = "incremental_parsing"
harness = false
required-features = ["unstable-benches"]

[[bench]]
name = "incremental_benchmark"
harness = false
required-features = ["unstable-benches"]

[[bench]]
name = "incremental_simple"
harness = false
required-features = ["unstable-benches"]

[[bench]]
name = "parser_bench"
harness = false
required-features = ["unstable-benches"]

[[bench]]
name = "perf_benchmark"
harness = false
required-features = ["unstable-benches"]

[[example]]
name = "glr_incremental_demo"
required-features = ["experimental_examples", "incremental_glr"]

[[example]]
name = "glr_incremental_simple"
required-features = ["experimental_examples", "incremental_glr"]

[[example]]
name = "incremental_demo"
required-features = ["experimental_examples"]

[[example]]
name = "json_parser_example"
required-features = ["json_example"]

[[example]]
name = "predicate_demo"
required-features = ["experimental_examples"]

[[example]]
name = "pure_parser_demo"
required-features = ["experimental_examples", "pure-rust"]

# [[example]]
# name = "validation_demo"
# required-features = ["experimental_examples"]
