[package]
name = "adze-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Steven Bal"]
license = "MIT OR Apache-2.0"
description = "GLR runtime for Adze parsers"
repository = "https://github.com/EffortlessMetrics/adze"
keywords = ["parser", "parsing", "glr", "tree-sitter", "incremental"]
categories = ["parsing", "compilers"]

[dependencies]
# Core dependencies
thiserror = "1.0"
smallvec = "1.13"
rustc-hash = "2.1"

# GLR core (optional, enabled by default)
adze-glr-core = { path = "../glr-core", optional = true }
adze-ir = { path = "../ir", optional = true }

# For incremental parsing (future)
memchr = "2.7"

# For tokenization (Phase 3.2)
regex = { version = "1.11", optional = true }

# Optional dependencies for different features
bumpalo = { version = "3.16", optional = true }
typed-arena = { version = "2.0", optional = true }

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
adze-tablegen = { path = "../tablegen", features = ["serialization"] }

[features]
default = ["glr-core", "serialization"]
# Enable GLR core integration
glr-core = ["dep:adze-glr-core", "dep:adze-ir"]
# Enable pure-Rust GLR runtime (bypasses TSLanguage encoding)
# This is the Phase 3 feature that uses ParseTable directly
pure-rust-glr = ["glr-core", "dep:regex"]
# Enable .parsetable file loading (Phase 3.1)
serialization = ["adze-glr-core/serialization"]
# Enable arena allocators for performance
arenas = ["bumpalo", "typed-arena"]
# Enable incremental parsing support
incremental = []
# Enable external scanner support
external-scanners = []
# Enable query system (future)
queries = []
# Make test utilities available outside of tests (for examples)
test-utils = []

[[example]]
name = "manual_tokens"
required-features = ["test-utils", "glr-core"]

[[example]]
name = "simple_parse"
required-features = ["test-utils", "glr-core"]

[[example]]
name = "arithmetic"
required-features = ["pure-rust-glr", "test-utils"]

[[example]]
name = "precedence_debug"
required-features = ["pure-rust-glr"]

