[package]
name = "adze-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Steven Bal"]
license = "MIT OR Apache-2.0"
description = "GLR runtime for Adze parsers"
repository = "https://github.com/EffortlessMetrics/adze"
keywords = ["parser", "parsing", "glr", "tree-sitter", "incremental"]
categories = ["parsing", "compilers"]

[dependencies]
# Core dependencies
thiserror = "1.0"
smallvec.workspace = true
rustc-hash.workspace = true
adze-parsetable-metadata = { version = "0.1.0", path = "../crates/parsetable-metadata" }
adze-runtime2-governance = { version = "0.1.0", path = "../crates/runtime2-governance" }
adze-error-location-core = { version = "0.1.0", path = "../crates/error-location-core" }

# GLR core (optional, enabled by default)
adze-glr-core = { path = "../glr-core", optional = true }
adze-ir = { path = "../ir", optional = true }

# For incremental parsing (future)
memchr = "2.7"

# For tokenization (Phase 3.2)
regex = { workspace = true, optional = true }

# Optional dependencies for different features
bumpalo = { version = "3.16", optional = true }
typed-arena = { version = "2.0", optional = true }

[dev-dependencies]
criterion.workspace = true
pretty_assertions = "1.4"
proptest.workspace = true
serde_json.workspace = true
adze-bdd-scenario-fixtures = { path = "../crates/bdd-scenario-fixtures" }
adze-tablegen = { path = "../tablegen", features = ["serialization"] }
adze-parser-contract = { path = "../crates/parser-contract" }

[features]
default = ["glr", "serialization"]
# Enable GLR core integration (canonical feature name)
glr = ["dep:adze-glr-core", "dep:adze-ir"]
# Deprecated alias - use `glr` instead
glr-core = ["glr"]
# Enable pure-Rust GLR runtime (bypasses TSLanguage encoding).
# This is the Phase 3 feature that uses ParseTable directly.
pure-rust = ["glr", "dep:regex"]
# Deprecated alias retained for backward compatibility.
pure-rust-glr = ["pure-rust"]
# Enable .parsetable file loading (Phase 3.1)
serialization = ["adze-glr-core/serialization"]
# Enable arena allocators for performance
arenas = ["bumpalo", "typed-arena"]
# Enable incremental parsing support
# Canonical GLR-style incremental feature (kept in sync with runtime crate naming).
incremental_glr = []
# Deprecated alias preserved for legacy runtime2 callers.
incremental = ["incremental_glr"]
# Enable external scanner support
# Canonical naming matches runtime crate.
external_scanners = []
# Deprecated alias preserved for legacy runtime2 callers.
external-scanners = ["external_scanners"]
# Enable query system (future).
query = []
# Deprecated alias preserved for legacy runtime2 callers.
queries = ["query"]
# Make test utilities available outside of tests (for examples)
test-utils = []

[[example]]
name = "manual_tokens"
required-features = ["test-utils", "glr"]

[[example]]
name = "simple_parse"
required-features = ["test-utils", "glr"]

[[example]]
name = "arithmetic"
required-features = ["pure-rust", "test-utils"]

[[example]]
name = "precedence_debug"
required-features = ["pure-rust"]

[[test]]
name = "basic"
required-features = ["test-utils"]

[[test]]
name = "clone_independence_comprehensive"
required-features = ["test-utils"]

[[test]]
name = "engine_builder_comprehensive"
required-features = ["test-utils"]

[[test]]
name = "feature_flags"
required-features = ["test-utils"]

[[test]]
name = "glr_edge_cases"
required-features = ["test-utils"]

[[test]]
name = "language_api_advanced_comprehensive"
required-features = ["test-utils"]

[[test]]
name = "parse_config_v4_comprehensive"
required-features = ["test-utils"]

[[test]]
name = "parser_api_comprehensive_v2"
required-features = ["test-utils"]

[[test]]
name = "parser_api_edge_cases"
required-features = ["test-utils"]

[[test]]
name = "parser_api_proptest"
required-features = ["test-utils"]

[[test]]
name = "parser_api_tests"
required-features = ["test-utils"]

[[test]]
name = "parser_api_v2_comprehensive"
required-features = ["test-utils"]

[[test]]
name = "parser_error_paths_comprehensive"
required-features = ["test-utils"]

[[test]]
name = "parser_integration_v2_comprehensive"
required-features = ["test-utils"]

[[test]]
name = "parser_lifecycle_comprehensive"
required-features = ["test-utils"]

[[test]]
name = "parser_public_api_comprehensive"
required-features = ["test-utils"]

[[test]]
name = "parser_timeout_comprehensive"
required-features = ["test-utils"]

[[test]]
name = "point_parser_error_comprehensive"
required-features = ["test-utils"]

[[test]]
name = "stabilization"
required-features = ["test-utils"]

[[test]]
name = "test_glr_integration"
required-features = ["test-utils"]

[[test]]
name = "test_helpers_comprehensive"
required-features = ["test-utils"]

[[test]]
name = "tree_editing_comprehensive"
required-features = ["test-utils"]

[[test]]
name = "tree_node_types_comprehensive"
required-features = ["test-utils"]
