[package]
name = "rust-sitter-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"

[features]
dynamic = ["libloading"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libloading = { version = "0.8", optional = true }
rust-sitter = { path = "../runtime" }

[[bin]]
name = "rust-sitter-cli"
path = "src/main.rs"
