[package]
name = "adze-tablegen"
version = "0.8.0-dev"
edition.workspace = true
rust-version.workspace = true
description = "Table generation and compression for Adze"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/adze"
homepage = "https://github.com/EffortlessMetrics/adze"
documentation = "https://docs.rs/adze-tablegen"
readme = "../README.md"
publish = true
keywords = ["parsing", "tablegen", "compression"]
categories = ["development-tools"]
include = [
    "Cargo.toml",
    "/LICENSE*",
    "/README*",
    "src/**",
    "MIGRATING.md"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
features = ["strict_docs"]

[dependencies]
adze-parsetable-metadata = { version = "0.1.0", path = "../crates/parsetable-metadata" }
adze-ir = { version = "0.8.0-dev", path = "../ir" }
adze-glr-core = { version = "0.8.0-dev", path = "../glr-core", features = ["serialization"] }
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true
rustc-hash.workspace = true

# Parsetable file generation dependencies
sha2 = "0.10"
chrono = { version = "0.4", features = ["std", "clock"], default-features = false }
rustc_version_runtime = "0.3"
adze-bdd-grid-core = { version = "0.1.0", path = "../crates/bdd-grid-core" }

# Tree-sitter backends
tree-sitter = { version = "0.25.2", optional = true }
tree-sitter-c2rust = { version = "0.25.2", optional = true }

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
rustc-hash.workspace = true
criterion.workspace = true
syn.workspace = true
serde_json.workspace = true

[[bench]]
name = "compression"
harness = false

[features]
default = ["tree-sitter-c2rust", "serialization"]
tree-sitter-standard = ["tree-sitter"]
tree-sitter-c2rust = ["dep:tree-sitter-c2rust"]
compression = [] # Feature for compression/decompression utilities
small-table = [] # Feature for compressed table generation
serialization = [] # Feature for .parsetable file generation
incremental_glr = [] # Feature flag for incremental GLR parsing support
strict_docs = []  # Feature flag for strict documentation enforcement
strict_api = []  # Feature flag for strict API surface checking
