[package]
name = "adze-tablegen"
version = "0.8.0-dev"
edition = "2024"
rust-version = "1.87"
description = "Table generation and compression for Adze's pure-Rust parser generation"
license = "MIT"
repository = "https://github.com/EffortlessMetrics/adze"
homepage = "https://github.com/EffortlessMetrics/adze"
documentation = "https://docs.rs/adze-tablegen"
readme = "README.md"
publish = false
include = [
    "Cargo.toml",
    "LICENSE*",
    "README*",
    "src/**",
    "MIGRATING.md"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
features = ["strict_docs"]

[dependencies]
adze-ir = { version = "0.8.0-dev", path = "../ir" }
adze-glr-core = { version = "0.8.0-dev", path = "../glr-core" }
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
indexmap = "2.0"
rustc-hash = "2.1"
chrono = "0.4"
rustc_version_runtime = "0.3"
sha2 = "0.10"

# Tree-sitter backends
tree-sitter = { version = "0.25.2", optional = true }
tree-sitter-c2rust = { version = "0.25.2", optional = true }

[dev-dependencies]
proptest = "1.5"
insta = "1.40"
rustc-hash = "2.1"
criterion = "0.5"
syn.workspace = true

[[bench]]
name = "compression"
harness = false

[features]
default = ["tree-sitter-c2rust"]
tree-sitter-standard = ["tree-sitter"]
tree-sitter-c2rust = ["dep:tree-sitter-c2rust"]
serialization = [] # Enable parse table serialization and .parsetable writer APIs
compression = [] # Feature for compression/decompression utilities
strict_docs = []  # Feature flag for strict documentation enforcement
strict_api = []  # Feature flag for strict API surface checking
small-table = [] # Enable reduced-size tablegen unit test fixture mode
