[package]
name = "adze-testing"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
adze = { path = "../runtime" }
adze-ir = { path = "../ir" }
adze-glr-core = { path = "../glr-core" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tempfile = "3.0"
clap = { version = "4.0", features = ["derive"] }
proptest = "1.4"

[dev-dependencies]
insta = "1.0"
