[package]
name = "adze-testing"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
adze = { path = "../runtime" }
adze-ir = { path = "../ir" }
adze-glr-core = { path = "../glr-core" }
anyhow = "1.0"
serde.workspace = true
serde_json.workspace = true
chrono = "0.4"
tempfile = "3.0"
clap = { version = "4.0", features = ["derive"] }
proptest.workspace = true

[dev-dependencies]
insta.workspace = true
