[package]
name = "adze-testing"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
adze = { path = "../runtime" }
adze-ir = { path = "../ir" }
adze-glr-core = { path = "../glr-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = "0.4"
tempfile.workspace = true
clap.workspace = true
proptest.workspace = true

[dev-dependencies]
adze-tablegen = { path = "../tablegen" }
insta.workspace = true
