[package]
name = "adze-tool"
description = "The external tool for Rust Sitter that extracts grammars from Rust definitions"
readme = "../README.md"
repository = "https://github.com/hydro-project/rust-sitter"
version = "0.8.0-dev"
authors = ["Steven Zimmerman, CPA"]
license = "MIT"
edition = "2024"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[features]
default = ["build_parsers"]
build_parsers = [
    "dep:tempfile",
    "dep:tree-sitter",
    "dep:tree-sitter-generate",
    "dep:cc",
]
no_opt = []   # compile without the optimizer for debugging
optimize = ["adze-ir/optimize"]
strict_docs = [] # Enable strict documentation requirements

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
syn-inline-mod = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
adze-common = { version = "0.8.0-dev", path = "../common" }
adze-ir = { version = "0.8.0-dev", path = "../ir" }
adze-glr-core = { version = "0.8.0-dev", path = "../glr-core" }
adze-tablegen = { version = "0.8.0-dev", path = "../tablegen" }
regex = "1.10"
anyhow = "1.0"
indexmap = "2.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"

tempfile = { version = "3", optional = true }
tree-sitter = { version = "0.25.2", optional = true }
tree-sitter-generate = { version = "0.25.1", optional = true }
cc = { version = "1", optional = true }

[[bin]]
name = "adze-gen"
path = "src/bin/rust-sitter.rs"

[dev-dependencies]
insta = "1.39"
