[package]
name = "rust-sitter-wasm-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
rust-sitter = { path = "../runtime", features = ["pure-rust"] }
rust-sitter-python = { path = "../grammars/python", features = ["pure-rust"] }
rust-sitter-example = { path = "../example", features = ["pure-rust"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]