[package]
name = "adze-wasm-demo"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
adze = { path = "../runtime", features = ["pure-rust", "ts-compat"] }
adze-python = { path = "../grammars/python", features = ["pure-rust"] }
adze-example = { path = "../example", features = ["pure-rust", "ts-compat"] }

[dependencies.web-sys]
version = "0.3"
license = "MIT OR Apache-2.0"
features = ["console"]
