[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
xshell = "0.2"
camino = "1"      # OS-agnostic path printing
serde_json = "1.0"
similar = "2.6"
console = "0.15"
walkdir = "2.5"
glob = "0.3"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
rust-sitter-tool = { version = "0.8.0-dev", path = "../tool" }
tempfile = "3.0"